<resources>
    <string name="app_name">Outsource Prestador</string>
    <string name="facebook_app_id">1052106148264805</string>
    <string name="fb_login_protocol_scheme">fb1052106148264805</string>

    <string name="notificacoes">Notificações</string>
    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="preco">Preço</string>
    <string name="deletar">Deletar</string>
    <string name="placeholder_insira_valor_carteira">Insira um valor para adicionar a sua carteira</string>
    <string name="cadastre_se_no_outsource">Cadastre-se no Outsource</string>
    <string name="primeiro_nome">Primeiro nome</string>
    <string name="ultimo_nome">Último nome</string>
    <string name="email">E-mail</string>
    <string name="celular">Celular</string>
    <string name="checkbox_termos_de_uso">Aceito os termos de uso e a política de privacidade</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="numero_do_telefone">Número do telefone</string>
    <string name="fazer_logout">Fazer logout</string>
    <string name="excluir_minha_conta">Excluir minha conta</string>
    <string name="codigo">Código</string>
    <string name="login">Login</string>
    <string name="ou">OU</string>
    <string name="nome_do_servico">Nome do Serviço</string>
    <string name="dinheiro_exemplo">R$ 410,00</string>
    <string name="estado">Estado</string>
    <string name="descricao">Descrição</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices rutrum blandit. Vestibulum scelerisque ornare purus, sed mollis metus tempor sed.</string>
    <string name="solicitar_orcamento">Solicitar Orçamento</string>
    <string name="prestador_nome_exemplo">Gabriel Morais</string>
    <string name="nota_exemplo">5,0</string>
    <string name="foto_do_solicitante">Foto do solicitante</string>
    <string name="negociacoes">Negociações</string>
    <string name="negociar">Negociar</string>
    <string name="concluir_servico">Concluir Serviço</string>
    <string name="aceitar_oferta">Aceitar Oferta</string>
    <string name="nota">Nota</string>
    <string name="foto_do_prestador">Foto do Prestador</string>
    <string name="solicitante_nome_exemplo">Gabriel Lourenço</string>
    <string name="comentarios">Comentários</string>
    <string name="header_avaliar_usuario">Avaliar usuário</string>
    <string name="solicitar_novo_orcamento">Solicitar novo orçamento</string>
    <string name="cancelar_negociacao">Cancelar negociação</string>
    <string name="botao_fechar">Botão fechar</string>
    <string name="botao_chat">Botão chat</string>
    <string name="saldo_atual">Saldo atual</string>
    <string name="cifrao">R$</string>
    <string name="adicionar">Adicionar</string>
    <string name="formas_de_pagamento">Formas de pagamento</string>
    <string name="nenhum_cartao_cadastrado">Nenhum cartão cadastrado</string>
    <string name="meus_dados">Meus dados</string>
    <string name="botao_editar">Botão editar</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="numero_exemplo">0</string>
    <string name="servicos_atendidos">Serviços atendidos</string>
    <string name="titulo_servico">Titulo Serviço</string>
    <string name="descricao_servico">Descrição Serviço</string>
    <string name="aceitar">Aceitar</string>
    <string name="configuracoes">Configurações</string>
    <string name="confirmar_codigo">Confirmar Codigo</string>
    <string name="novos">Novos</string>
    <string name="em_andamento">Em Andamento</string>
    <string name="concluidos">Concluídos</string>
    <string name="visualizar_servico">Visualizar serviço</string>
    <string name="solicitado_por">Solicitado por</string>
    <string name="aberta">Aberta</string>
    <string name="em_negociacao">Em negociacao</string>
    <string name="spinner_estado_servico_header">Selecione o estado do serviço</string>
    <string name="nenhum_servico">Nenhum serviço</string>
    <string-array name="tipos_servicos_andamento">
        <item>Em Execução</item>
        <item>Em Negociação</item>
    </string-array>

    <!--Strings Database-->
    <string name="visualizacao">visualizacao</string>
    <string name="servico">servico</string>
    <string name="usuario">usuario</string>
    <string name="prestador">prestador</string>
    <string name="oferta">oferta</string>
    <string name="notificacao">notificacao</string>
    <string name="feedback">feedback</string>
    <string name="mensagem">mensagem</string>
    <string name="conversaUsuario">conversaUsuario</string>
    <string name="conversaPrestador">conversaPrestador</string>
    <string name="estadoServico">estadoServico</string>
    <string name="ordemRef">ordemRef</string>
    <string name="prestadorID">prestadorID</string>
    <string name="servicoID">servicoID</string>
    <string name="servicoNome">servicoNome</string>
    <string name="tempo">tempo</string>
    <string name="ultimaMensagem">ultimaMensagem</string>
    <string name="usuarioID">usuarioID</string>
    <string name="comentario">comentario</string>
    <string name="comentadorNome">comentadorNome</string>
    <string name="notaB">nota</string>
    <string name="autor">autor</string>
    <string name="nomeAutor">nomeAutor</string>
    <string name="texto">texto</string>
    <string name="valor">valor</string>
    <string name="estadoB">estado</string>
    <string name="nomeServico">nomeServico</string>
    <string name="textoNotificacao">textoNotificacao</string>
    <string name="tipoNotificacao">tipoNotificacao</string>
    <string name="ofertaValor">ofertaValor</string>
    <string name="prestadorId">prestadorId</string>
    <string name="prestadorNome">prestadorNome</string>
    <string name="carteira">carteira</string>
    <string name="emailB">email</string>
    <string name="id">id</string>
    <string name="pesoNota">pesoNota</string>
    <string name="sobreNome">sobreNome</string>
    <string name="telefone">telefone</string>
    <string name="concluido">concluido</string>
    <string name="data">data</string>
    <string name="dataf">dataf</string>
    <string name="descricaoB">descricao</string>
    <string name="idCriador">idCriador</string>
    <string name="idPrestador">idPrestador</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="nomeB">nome</string>
    <string name="precoB">preco</string>
    <string name="urgente">urgente</string>
    <string name="aberto">aberto</string>
    <string name="andamento">andamento</string>
    <string name="nenhuma_notificacao">Você não possui nenhuma notificação. Calma, quando tiver uma, ela será mostrada aqui</string>
    <string name="nenhuma_conversa_iniciada">Nenhuma conversa iniciada</string>
</resources>
