<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_background"
    tools:context="com.outsource.inovaufrpe.prestador.prestador.gui.CadastroActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/cadastre_se_no_outsource"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etNomeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/primeiro_nome"
                android:inputType="textPersonName|textAutoCorrect"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etSobrenomeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ultimo_nome"
                android:inputType="textPersonName|textAutoCorrect"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/etTelefoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:inputType="phone"
                android:textColor="@color/colorBlack" />

            <!--CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/checkbox_termos_de_uso" /-->

            <Button
                android:id="@+id/btCadastrarID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/cadastrar" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

