<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.outsource.inovaufrpe.prestador.servico.gui.VisualizarServicoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNomeServico"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrecoServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textSize="28sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvEstadoServicoID"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvNomeServico"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/descricao"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescricaoServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--Layout p/ exibir Quem Solicita ou Executado por-->
    <LinearLayout
        android:id="@+id/layoutPessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTituloLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textAllCaps="true"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNomePessoa"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvNomePessoa"
                app:srcCompat="@drawable/ic_star_black_24dp"
                tools:ignore="ContentDescription,VectorDrawableCompat" />

            <TextView
                android:id="@+id/tvNotaPessoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivFotoSolicitante"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/default_profile"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>
    </LinearLayout>
    <!--Fim Layout Prestador-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutOfertaID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="11dp"
            android:text="Sua oferta: "
            android:textColor="@color/colorLightPrimary"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValorOfertaID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.442" />

        <TextView
            android:id="@+id/tvValorOfertaID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginEnd="16dp"
            android:text="Valor"
            android:textColor="@color/colorMoney"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.446" />

        <TextView
            android:id="@+id/tvTempoOfertaID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/tvValorOfertaID"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tempo"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.068" />
    </android.support.constraint.ConstraintLayout>



    <RelativeLayout
        android:id="@+id/layoutBotoesBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layoutBtnNegociar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/screenEnd"
            android:background="@color/colorPrimary"
            android:visibility="gone">

            <Button
                android:id="@+id/btnNegociar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/negociar"
                android:textColor="@color/colorWhite"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBtnConcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/screenEnd"
            android:visibility="gone">

            <com.outsource.inovaufrpe.prestador.utils.swipebutton.SwipeButton
                android:id="@+id/btnConcluirServico"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <View
            android:id="@+id/screenEnd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark" />

    </RelativeLayout>


</LinearLayout>
